port to 1.18 / java 8