@@ -22,17 +22,20 @@ import me.shedaniel.clothconfig2.impl.builders.AbstractFieldBuilder;
 import net.fabricmc.api.ModInitializer;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.gui.screen.Screen;
+import net.minecraft.text.LiteralText;
 import net.minecraft.text.Text;
+import net.minecraft.text.TranslatableText;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 
@@ -50,7 +53,7 @@ public class McQoy implements ModInitializer {
 		Multimap<String, Config> modConfigs = HashMultimap.create();
 		for (Config config : ConfigsImpl.getAll()) {
 			String modId = config.family().isEmpty() ? config.id() : config.family();
-			List.of(
+			Arrays.asList(
 				modId,
 				modId.replace("-", ""),
 				modId.replace("_", ""),
@@ -64,7 +67,7 @@ public class McQoy implements ModInitializer {
 	}
 
 	public static Screen createScreen(Screen parent, String modId, Collection<Config> configs) {
-		final ConfigBuilder builder = ConfigBuilder.create().setParentScreen(parent).setTitle(Text.of("Config: " + FabricLoader.getInstance().getModContainer(modId).orElseThrow().getMetadata().getName()));
+		final ConfigBuilder builder = ConfigBuilder.create().setParentScreen(parent).setTitle(Text.of("Config: " + FabricLoader.getInstance().getModContainer(modId).get().getMetadata().getName()));
 		LinkedHashMap<String, ConfigCategory> categories = new LinkedHashMap<>();
 		for (Config config : configs) {
 			Text configDisplayName = getDisplayName(config, config.family().isEmpty() ? config.id() : config.family(), NamingSchemes.TITLE_CASE);
@@ -73,7 +76,7 @@ public class McQoy implements ModInitializer {
 				if (field.key().length() == 1) { // No Section
 					category = categories.computeIfAbsent(configDisplayName.getString(), k -> builder.getOrCreateCategory(configDisplayName));
 				} else { // With section, take topmost
-					ValueTreeNode topSection = config.getNode(List.of(field.key().getKeyComponent(0)));
+					ValueTreeNode topSection = config.getNode(Collections.singletonList(field.key().getKeyComponent(0)));
 					Text sectionDisplayName = getDisplayName(topSection, topSection.key().getLastComponent(), NamingSchemes.TITLE_CASE);
 					category = categories.computeIfAbsent(sectionDisplayName.getString(), k -> builder.getOrCreateCategory(sectionDisplayName));
 				}
@@ -95,7 +98,8 @@ public class McQoy implements ModInitializer {
 		else if (defaultValue instanceof Float) category.addEntry(option((TrackedValue<Float>) field, builder::startFloatField).build());
 		else if (defaultValue instanceof Double) category.addEntry(option((TrackedValue<Double>) field, builder::startDoubleField).build());
 		else if (defaultValue instanceof Enum) category.addEntry(option((TrackedValue<Enum>) field, (d, e) -> builder.startEnumSelector(d, e.getDeclaringClass(), e)).build());
-		else if (defaultValue instanceof ValueListImpl<?> list) {
+		else if (defaultValue instanceof ValueListImpl<?>) {
+			ValueListImpl<?> list = (ValueListImpl<?>) defaultValue;
 			// Missing: Boolean List
 			if (list.getDefaultValue() instanceof String) category.addEntry(option((TrackedValue<List<String>>) field, builder::startStrList).build());
 			else if (list.getDefaultValue() instanceof Integer) category.addEntry(option((TrackedValue<List<Integer>>) field, builder::startIntList).build());
@@ -120,8 +124,8 @@ public class McQoy implements ModInitializer {
 	private static <T, B extends AbstractFieldBuilder<T, ?, B>, B2 extends AbstractFieldBuilder<T, ?, B2>> void slider(ConfigCategory category, TrackedValue<T> field, BiFunction<Text, T, B> simple, Function4<Text, T, T, T, B2> slider) {
 		Constraint.Range<?> tempRangeConstraint = null;
 		for (Constraint<?> constraint : field.constraints()) {
-			if (constraint instanceof Constraint.Range<?> range) {
-				tempRangeConstraint = range;
+			if (constraint instanceof Constraint.Range<?>) {
+				tempRangeConstraint = (Constraint.Range<?>) constraint;
 				break;
 			}
 		}
@@ -136,11 +140,11 @@ public class McQoy implements ModInitializer {
 	public static Text getDisplayName(MetadataContainer value, String fallback, NamingScheme fallbackScheme) {
 		if (value.hasMetadata(DisplayName.TYPE)) {
 			if (value.metadata(DisplayName.TYPE).isTranslatable()) {
-				return Text.translatable(value.metadata(DisplayName.TYPE).getName());
+				return new TranslatableText(value.metadata(DisplayName.TYPE).getName());
 			}
-			return Text.literal(value.metadata(DisplayName.TYPE).getName());
+			return new LiteralText(value.metadata(DisplayName.TYPE).getName());
 		} else {
-			return Text.literal(Objects.requireNonNullElse(value.metadata(DisplayNameConvention.TYPE), fallbackScheme).coerce(fallback));
+			return new LiteralText((value.hasMetadata(DisplayNameConvention.TYPE) ? value.metadata(DisplayNameConvention.TYPE) : fallbackScheme).coerce(fallback));
 		}
 	}
 
